fix product list misalignment

--- a/stylesheets/index.css
+++ b/stylesheets/index.css
@@ -70,7 +70,6 @@
     justify-content:center;
     align-items:center;
     flex-direction: column;
-    margin-bottom: 16px;
 
     text-decoration: none;
 }
